RESOLVED FIXED212434
REGRESSION (PSON): Resizing WKWebView during cross-site navigation results in the page laying out at the wrong size
https://bugs.webkit.org/show_bug.cgi?id=212434
Summary REGRESSION (PSON): Resizing WKWebView during cross-site navigation results in...
Tim Horton
Reported 2020-05-27 14:35:15 PDT
REGRESSION (PSON): Resizing WKWebView during cross-site navigation results in the page laying out at the wrong size
Attachments
Patch (6.79 KB, patch)
2020-05-27 14:35 PDT, Tim Horton
no flags
Patch (7.21 KB, patch)
2020-05-27 17:09 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-05-27 14:35:32 PDT
Tim Horton
Comment 2 2020-05-27 14:35:34 PDT
Chris Dumez
Comment 3 2020-05-27 14:49:26 PDT
Comment on attachment 400384 [details] Patch r=me
Tim Horton
Comment 4 2020-05-27 16:07:17 PDT
Erg, need to have a responsive viewport in my test if I want it to work on iOS
Tim Horton
Comment 5 2020-05-27 17:09:20 PDT
EWS
Comment 6 2020-05-27 17:36:32 PDT
Committed r262226: <https://trac.webkit.org/changeset/262226> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400407 [details].
Note You need to log in before you can comment on or make changes to this bug.