REGRESSION (PSON): Resizing WKWebView during cross-site navigation results in the page laying out at the wrong size https://bugs.webkit.org/show_bug.cgi?id=212434 <rdar://problem/51621621>

Reviewed by Chris Dumez.

Source/WebKit:

New API test: ProcessSwap.ResizeWebViewDuringCrossSiteProvisionalNavigation.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::swapToProvisionalPage):
Set m_hasRunningProcess before calling setDrawingArea, instead of immediately after,
so that setDrawingArea can call methods that check m_hasRunningProcess.

(WebKit::WebPageProxy::setDrawingArea):
When swapping DrawingAreas, push the current view size down. DrawingArea
is initially created with a size, but the size can change while the DrawingArea
is still provisional.

* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::viewSize):
Simplify this implementation now that we don't ever need to support WKContentView
outside of WKWebView (since 2014 or so).

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
Add a test ensuring that we correctly update the view size if it changes
during the provisional phase of the navigation.


Canonical link: https://commits.webkit.org/225285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262226 268f45cc-cd09-0410-ab3c-d52691b4dbfc